# py-Math-Wizards

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS-TEMPLATE.md  AGENTS.md  LICENSE  README.md  package.json  pyproject.toml  requirements.txt
py_math_wizards/: banner.py  greetings.py  main.py  messages.py  question_generator.py  statistics.py
py_math_wizards/data/: bad.txt  ok.txt
tests/: test_banner.py  test_greetings.py  test_messages.py  test_question_generator.py  test_statistics.py
tmp/: Zadanie.md
