[project]
name = "py-math-wizards"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacek 'Szumak' Kotlarski",email = "szumak@virthost.pl"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "jsktoolbox (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "py_math_wizards", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
