[project]
name = "py-math-wizards"
version = "0.1.0"
description = "Console application to help children learn multiplication tables"
authors = [
    {name = "Jacek 'Szumak' Kotlarski",email = "szumak@virthost.pl"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "jsktoolbox (>=1.2.1,<2.0.0)"
]

[tool.poetry]
name = "py-math-wizards"
version = "0.1.0"
description = "Console application to help children learn multiplication tables"
authors = ["Jacek 'Szumak' Kotlarski <szumak@virthost.pl>"]
readme = "README.md"
packages = [{include = "py_math_wizards"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
jsktoolbox = ">=1.2.1,<2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
pytest = "^8.0.0"
pycodestyle = "^2.12.0"
flake8 = "^7.0.0"
mypy = "^1.11.0"
isort = "^5.13.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
math-wizards = "py_math_wizards.main:main"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
